--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </ul>
                 <h4>Project Video</h4>
                 <video controls height="300" width="200">
-                    <source src="/Users/joshboelema/Downloads/vr1.mov" type="video/mp4">
+                    <source src="vr1.mov" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 
@@ -73,8 +73,8 @@
                     <li>Breadboards, wires, LCD, push buttons, LEDs, NPN transistors</li>
                 </ul>
                 <h4>Project Images</h4>
-                <img src="/Users/joshboelema/Desktop/br1.png" alt="Project 2 Image 1" class="project-image">
-                <img src="/Users/joshboelema/Desktop/br2.png" alt="Project 2 Image 2" class="project-image">
+                <img src="br1.png" alt="Project 2 Image 1" class="project-image">
+                <img src="br2.png" alt="Project 2 Image 2" class="project-image">
                 <h4>Links</h4>
                 <p><a href="https://github.com/LinyunLiu/SeniorReminderDeviceServer" target="_blank">GitHub Repository</a></p>
             </div>
@@ -92,8 +92,8 @@
                     <li>Software development practices (Agile development)</li>
                 </ul>
                 <h4>Project Images</h4>
-                <img src="/Users/joshboelema/Desktop/jr1.png" alt="Project 3 Image 1" class="project-image">
-                <img src="/Users/joshboelema/Desktop/jr2.png" alt="Project 3 Image 2" class="project-image">
+                <img src="jr1.png" alt="Project 3 Image 1" class="project-image">
+                <img src="jr2.png" alt="Project 3 Image 2" class="project-image">
                 <h4>Project Video</h4>
                 
                 <h4>Links</h4>
